# Test-Store-Data-Analysis

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: actions.yaml
conf/: configs.yaml
data/processed/: products.csv
notebooks/: 01_web_scraping_tests.ipynb  02_data_preprocessing.ipynb
src/: constants.py  exception.py  logger.py
src/components/: data_preprocessor.py  link_extraction.py  product_scraper.py
src/pipelines/: stage_01_data_extraction.py  stage_02_data_preprocessor.py
src/utils/: basic_utils.py
